This file contains the logs between consecutive releases
********************************************************
# Make last version consistent with CMakeLists.txt

Release 1.4.0
=============
- Covariance type are modified: BESSEL_K into MATERN and BESSEL_J into BESSELJ
- The constructor of MeshETurbo() defines rotation using 'angles' rather than 'rotmat'
- New class SpatialIndices and corresponding methods CGI, LIC, GIC, ...) as in RGeostats (micro not yet available).
- Names of Variables used to compute the Variogram are stored in the Vario object
- Empirical anamorphosis: plugging Normal score; parametrizing the dilution 

Release 1.3.2
=============
- Fix Windows package for python 3.10 (Numpy compatibility)

Release 1.3.1
=============
- Fix getColormap in plot.py

Release 1.3.0
=============
- migrateAllVariables() is now a method of DbGrid (not a static) with additional arguments
- R 4.4.1 support
- Modify 'flag_cell' into 'flagCell'
- Modify 'flag_integer' into 'flagInteger'
- Modify flag_add_rank into flagAddSampleRank
- change 'flag_add_coordinates' into 'flagAddCoordinates' in DbGrid::createSubGrid() and DbGrid::reset()
- Increase the size of the Enums from 32 to 40.
- Model::evalDriftMat() is replaced by Model::evalDriftMatrix()
- Model::covMatrixMS() is replaced by evalCovMatrixSymmetric()
- Model::covMatrixM() is replaced by evalCovMatrix()
- Model::covMatrixV() is replaced by evalCovMatrixV() (option added)
- Db::getActiveSampleNumber() (deprecated) is replaced by getSampleNumber(true)
- Use Eigen library for content storage of all dense matrices

Release 1.2.3
=============
- Fix windows python package

Release 1.2.2
=============
- R 4.4.0 support

Release 1.2.1
=============
- Fix artifact upload/download for github action

Release 1.2.0
=============
- Correct the functions evalCovMat() and evalDriftMat()
- Adding calculation of log-likelihood evaluation in the general case (class Model)
- Adding calculation of Log-Likelihood in SPDE