@@ -87,6 +87,11 @@ protected:
                              VectorT<T>& vec,
                              int nvalues);
 
+  template<typename T>
+  static bool _recordReadVecInPlace(std::istream& is,
+                             const String& title,
+                             VectorDouble::iterator& it,
+                             int nvalues);
   static bool _onlyBlanks(char *string);
 
   static bool _tableRead(std::istream &is,
@@ -269,11 +274,84 @@ bool ASerializable::_recordReadVec(std::istream& is,
   }
 
   // Check the number of value actually read
-  if (nvalues != (int) vec.size())
+  if (nvalues != ecr)
   {
-    messerr("Reading (%s) was expecting %d terms. %d found",
-            title.c_str(), nvalues,(int) vec.size());
+    messerr("Reading (%s) was expecting %d terms. %d found", title.c_str(),
+            nvalues, ecr);
     vec.clear();
+    return false;
+  }
+  return true;
+}
+
+template<typename T>
+bool ASerializable::_recordReadVecInPlace(std::istream& is,
+                                          const String& title,
+                                          VectorDouble::iterator& it,
+                                          int nvalues)
+{
+  int ecr = 0;
+  if (is.good())
+  {
+    String line;
+
+    // Skip comment or empty lines
+    while (is.good())
+    {
+      // std::getline(is, line);
+      gslSafeGetline(is, line);
+      if (!is.good() && !is.eof())
+      {
+        messerr("Error while reading %s", title.c_str());
+        return false;
+      }
+      line = trim(line);
+      if (!line.empty() && line[0] != '#') break; // We found something
+    }
+
+    // Decode the line
+    std::stringstream sstr(line);
+    while (sstr.good())
+    {
+      String word;
+      sstr >> word;
+      if (!sstr.good() && !sstr.eof())
+      {
+        messerr("Error while reading %s", title.c_str());
+        return false;
+      }
+      word = trim(word);
+      if (word.empty()) continue;
+      if (word[0] == '#') break; // We found a comment
+
+      T val;
+      if (word == STRING_NA)
+      {
+        // Get NA value
+        val = getNA<T>();
+      }
+      else
+      {
+        // Decode the value
+        std::stringstream sword(word);
+        sword >> val;
+      }
+      if (ecr > nvalues)
+      {
+        messerr("Too many values read");
+        return false;
+      }
+      *it = val;
+      ecr++;
+      it++;
+    }
+  }
+
+  // Check the number of value actually read
+  if (nvalues != ecr)
+  {
+    messerr("Reading (%s) was expecting %d terms. %d found", title.c_str(),
+            nvalues, ecr);
     return false;
   }
   return true;
