@@ -11,7 +11,6 @@
 #include "Enum/AEnum.hpp"
 #include "Basic/AStringable.hpp"
 
-
 void AEnum::printEnum() const {
   _printMsg("  %2d - %11s : %s\n", _value, _key.c_str(), _descr.c_str());
 }
