@@ -94,8 +94,15 @@ int KNN::getIndex(int rank, int ineigh) const
   return _indices[rank][ineigh];
 }
 
-VectorDouble KNN::getDistance(int rank) const
+VectorDouble KNN::getDistances(int rank) const
 {
   if (rank < 0 || rank >= _n_samples) return VectorDouble();
   return VectorHelper::initVDouble(_distances[rank], _n_neighbors);
+}
+
+double KNN::getDistance(int rank, int ineigh) const
+{
+  if (rank < 0 || rank >= _n_samples) return ITEST;
+  if (ineigh < 0 || ineigh >= _n_neighbors) return ITEST;
+  return _distances[rank][ineigh];
 }
